--- a/css/player.css
+++ b/css/player.css
@@ -22,7 +22,7 @@ li { margin:0 0 0.5em; }
 
 #pane { background:#fff; margin:0 auto; padding:30px 0 0; width:600px; position:relative; }
 
-#menu, #track { margin:0 auto; overflow:auto; width:500px; }
+#menu, #transcript { margin:0 auto; overflow:auto; width:500px; }
 #track { display:none;  }
 
 #player { height:150px; margin:0 auto; width:98%; position:relative; }
