--- a/css/player.css
+++ b/css/player.css
@@ -22,8 +22,10 @@ li { margin:0 0 0.5em; }
 
 #pane { background:#fff; margin:0 auto; padding:30px 0 0; width:600px; position:relative; }
 
-#menu, #transcript { margin:0 auto; overflow:auto; width:500px; }
-#track { display:none;  }
+#menu, #transcript { height:770px; margin:0 auto; overflow:auto; width:500px; }
+#transcript { height:620px; margin:0 auto; overflow:auto; width:500px; }
+#transcript p { position:absolute; }
+#transcript p, #track { display:none; }
 
 #player { height:150px; margin:0 auto; width:98%; position:relative; }
 #prog { height:1px; background:#999999; margin:20px 0; position:absolute; left:0; right:84px; }
