--- a/css/player.css
+++ b/css/player.css
@@ -16,19 +16,16 @@ ul { list-style-type:disc; }
 li { margin:0 0 0.5em; }
 
 .right { float:right; }
-.button { background:#34556a url(img/button.png) 0 50% no-repeat; border-radius:41px; color:#fff; display:inline-block; height:84px; margin:0 0 10px; text-decoration:none; text-indent:-1000px; width:84px; }
+.button { background:#34556a url(img/button.png) 0 50% no-repeat; border-radius:41px; color:#fff; display:inline-block; height:84px; margin:0 0 10px; text-decoration:none; text-indent:-9999px; width:84px; }
 .button:hover, #progknob:hover { background-color:#587a8e; }
 .menu.button { background-image:none; border-radius:0; height:auto; margin:0 0 20px; padding:25px 0; text-indent:40px; vertical-align:middle; width:100%; }
 
-#pane { background:#fff; margin:0 auto; padding:30px 0 0; width:600px; position:relative; }
+#pane { background:#fff; height:800px; margin:0 auto; padding:30px 0 0; width:600px; }
 
-#menu, #transcript { height:770px; margin:0 auto; overflow:auto; width:500px; }
-#transcript { height:620px; margin:0 auto; overflow:auto; width:500px; }
-#transcript p { position:absolute; }
-#transcript p, #track { display:none; }
-
-#player { height:150px; margin:0 auto; width:98%; position:relative; }
-#prog { height:1px; background:#999999; margin:20px 0; position:absolute; left:0; right:84px; }
+#menu, #track { height:100%; margin:0 auto; width:500px; position:relative; }
+#transcript p { display:none; }
+#player { background:#fff; height:150px; margin:0 auto; width:100%; position:absolute; bottom:0; }
+#prog { height:1px; background:#999; margin:20px 0; position:absolute; left:0; right:84px; }
 #progknob { background:#34556a; height:40px; width:10px; margin:-20px 0  0 -5px; position:absolute; }
 #time { font-size:25px; margin-top:2px; position:absolute; right:0; }
 #ctrls { position:absolute; bottom:0; }
