--- a/css/player.css
+++ b/css/player.css
@@ -1,8 +1,8 @@
-body { background:#36424a; color:#36424a; font:24px/1.184 "V&A TheSansPlain",arial,helvetica,freesans,sans-serif; margin:0; }
+body { background:#36424a; color:#36424a; font:24px/1.7 "V&A TheSansPlain",arial,helvetica,freesans,sans-serif; margin:0; }
 img { vertical-align:bottom; }
-p, ol, ul { margin-bottom:1em; }
+p, ol, ul { margin:0 0 20px; }
 a { color:#292728; cursor:pointer; outline:none; text-decoration:underline; }
-h1, h2 { font-size:125%; font-weight:normal; line-height:1.1em; margin:0 0 30px; }
+h1, h2 { font-size:125%; font-weight:normal; line-height:1.18em; margin:0 0 40px; }
 strong { font-weight:500; }
 abbr, acronym { border-bottom:1px dotted #b5b5b5; } 
 em, i { font-style:italic; }
@@ -18,18 +18,19 @@ li { margin:0 0 0.5em; }
 .right { float:right; }
 .button { background:#34556a url(img/button.png) 0 50% no-repeat; border-radius:41px; color:#fff; display:inline-block; height:84px; margin:0 0 10px; text-decoration:none; text-indent:-9999px; width:84px; }
 .button:hover, #progknob:hover { background-color:#587a8e; }
-.menu.button { background-image:none; border-radius:0; height:auto; margin:0 0 20px; padding:25px 0; text-indent:40px; vertical-align:middle; width:100%; }
+.menu.button { background-image:none; border-radius:0; height:auto; margin:0 0 20px; padding:20px 0; text-indent:40px; vertical-align:middle; width:100%; }
 
-#pane { background:#fff; height:800px; margin:0 auto; padding:30px 0 0; width:600px; }
-
+#pane { background:#fff; height:760px; margin:0 auto; padding:40px 0 0; width:600px; }
 #menu, #track { height:100%; margin:0 auto; width:500px; position:relative; }
 #transcript p { display:none; }
+#transcript p>br:first-child { display:none; }
 #player { background:#fff; height:150px; margin:0 auto; width:100%; position:absolute; bottom:0; }
 #prog { height:1px; background:#999; margin:20px 0; position:absolute; left:0; right:84px; }
 #progknob { background:#34556a; height:40px; width:10px; margin:-20px 0  0 -5px; position:absolute; }
 #time { font-size:25px; margin-top:2px; position:absolute; right:0; }
-#ctrls { position:absolute; bottom:0; }
-#volbg { background:#d1cccc; border:3px solid #36424a; border-radius:42px; display:inline-block; height:78px; margin:0 0 -61px; width:205px; position:relative; }
+#ctrls { margin-left:-6px; text-align:center; position:absolute; bottom:0; }
+#ctrls>a, #ctrls>div { margin-left:7px; }
+#volbg { background:#d1cccc; border:3px solid #36424a; border-radius:42px; display:inline-block; height:78px; margin-bottom:-55px; width:205px; position:relative; }
 #vol { position:absolute; left:39px; right:39px; }
 #volknob { background-position:-336px 50%; margin:-3px 0 0 -42px; position:absolute; }
 #list { background-position:-84px 50%; }
