--- a/css/player.css
+++ b/css/player.css
@@ -16,7 +16,7 @@ ul { list-style-type:disc; }
 li { margin:0 0 0.5em; }
 
 .right { float:right; }
-.button { background:#34556a url(img/button.png) 0 50% no-repeat; border-radius:41px; color:#fff; display:inline-block; height:84px; margin:0 0 10px; text-decoration:none; text-indent:-9999px; width:84px; }
+.button { background:#34556a url(img/button.png) 0 50% no-repeat; border-radius:41px; color:#fff; display:inline-block; height:84px; margin:0 0 19px; text-decoration:none; text-indent:-9999px; width:84px; }
 .button:hover, #progknob:hover { background-color:#587a8e; }
 .menu.button { background-image:none; border-radius:0; height:auto; margin:0 0 20px; padding:20px 0; text-indent:40px; vertical-align:middle; width:100%; }
 
@@ -24,13 +24,15 @@ li { margin:0 0 0.5em; }
 #menu, #track { height:100%; margin:0 auto; width:500px; position:relative; }
 #transcript p { display:none; }
 #transcript p>br:first-child { display:none; }
-#player { background:#fff; height:150px; margin:0 auto; width:100%; position:absolute; bottom:0; }
+#start, #player, #ctrls, #list, #next { position:absolute; bottom:0; }
+#start, #next  { right:-34px; }
+#list  { left:-34px; }
+#player { background:#fff; height:165px; margin:0 auto; width:100%; }
 #prog { height:1px; background:#999; margin:20px 0; position:absolute; left:0; right:84px; }
 #progknob { background:#34556a; height:40px; width:10px; margin:-20px 0  0 -5px; position:absolute; }
-#time { font-size:25px; margin-top:2px; position:absolute; right:0; }
-#ctrls { margin-left:-6px; text-align:center; position:absolute; bottom:0; }
-#ctrls>a, #ctrls>div { margin-left:7px; }
-#volbg { background:#d1cccc; border:3px solid #36424a; border-radius:42px; display:inline-block; height:78px; margin-bottom:-55px; width:205px; position:relative; }
+#time { font-size:25px; margin-top:-0.2em; position:absolute; right:0; }
+#ctrls { text-align:center; width:100%; }
+#volbg { background:#d1cccc; border:3px solid #36424a; border-radius:42px; display:inline-block; height:78px; margin:0 0 -55px 23px; width:205px; position:relative; }
 #vol { position:absolute; left:39px; right:39px; }
 #volknob { background-position:-336px 50%; margin:-3px 0 0 -42px; position:absolute; }
 #list { background-position:-84px 50%; }
