--- a/css/player.css
+++ b/css/player.css
@@ -20,7 +20,8 @@ li { margin:0 0 0.5em; }
 .button:hover, #progknob:hover { background-color:#587a8e; }
 .menu.button { background-image:none; border-radius:0; display:table-row; height:80px; line-height:1em; text-indent:0; width:100%; }
 .menu.button>img { height:80px; width:auto; }
-.menu.button>span { display:table-cell; padding:0 15px; vertical-align:middle; width:100%; }
+.menu.button>img.none { visibility:hidden; width:5px; }
+.menu.button>span { display:table-cell; width:100%; padding:0 15px; vertical-align:middle; width:100%; }
 
 #pane { background:#fff; height:760px; margin:0 auto; padding:40px 0 0; width:600px; }
 #menu, #track { height:100%; margin:0 auto; width:500px; position:relative; }
