replace jQuery-ui slider+touch libraries with superior, faster, lighter Carini Sliders

--- a/css/player.css
+++ b/css/player.css
@@ -31,13 +31,13 @@ li { margin:0 0 0.5em; }
 #start, #next  { right:-34px; }
 #list  { left:-34px; }
 #player { background:#fff; height:165px; margin:0 auto; width:100%; }
-#prog { height:1px; background:#999; margin:20px 0; position:absolute; left:0; right:84px; }
-#progknob { background:#34556a; height:40px; width:10px; margin:-20px 0  0 -5px; position:absolute; }
+#prog { height:40px; border-bottom:1px solid #999; margin:-20px 0 0; position:absolute; width:85%; }
+#progknob { background:#34556a; height:41px; margin:20px 0 0; width:10px; position:absolute; }
 #time { font-size:25px; margin-top:-0.2em; position:absolute; right:0; }
 #ctrls { text-align:center; width:100%; }
-#volbg { background:#d1cccc; border:3px solid #36424a; border-radius:42px; display:inline-block; height:78px; margin:0 0 -55px 23px; width:205px; position:relative; }
-#vol { position:absolute; left:39px; right:39px; }
-#volknob { background-position:-336px 50%; margin:-3px 0 0 -42px; position:absolute; }
+#volbg { background:#d1cccc; border:3px solid #36424a; border:3px solid #36424a; border-radius:42px; display:inline-block; height:78px; margin:0 0 -55px 23px; width:205px; position:relative; }
+#vol { margin:0 39px; width:127px; position:absolute; }
+#volknob { background-position:-336px 50%; margin:-3px 0 0; position:absolute; left:0; }
 #list { background-position:-84px 50%; }
 #play { background-position:-168px 50%; }
 #play.playing { background-position:-252px 50%; }
